# troopers24-bsp

./: .clang-format  CMakeLists.txt  README.md  hardware.c  hardware.h  mch2022_badge.h  rainbow.c  wifi_connect.c  wifi_connection.c
include/: hardware.h  mch2022_badge.h  rainbow.h  troopers23_badge.h  troopers24_badge.h  wifi_connect.h  wifi_connection.h
